Corrected the z-indexes and made results content more left-To incorporate the responsive tabs options

--- a/css/custom-styles-result.css
+++ b/css/custom-styles-result.css
@@ -42,7 +42,7 @@
 	top: 0px;
 	left: 50%;
     
-    z-index: -2;
+    z-index: -5;
 }
 
 .white-gradient {
@@ -61,7 +61,7 @@
 	top: 0px;
 	left: 50%;
     
-    z-index: -1;
+    z-index: -4;
 	
 }
 
@@ -143,7 +143,7 @@ img {
 #right-sidebar {
     position: fixed;
     top: 90px;
-
+    z-index: -3;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
@@ -189,7 +189,6 @@ hr {
     width: 200px;
     bottom: 20px;
     right: 30px;
-    
     padding-top: 15px;
     padding-left: 0px;
 
@@ -197,7 +196,7 @@ hr {
     background-color: rgba(52,52,52,.95);
     box-shadow: -3px 3px 3px rgba(4,4,4,.4);
     color: white;
-    z-index: -1;
+
 }
 
 .trip-info-img {
@@ -211,4 +210,9 @@ hr {
     padding-top: 0px;
     padding-bottom: 0px;
     font-weight: 600;
+}
+
+#container-parent {
+    padding-top:90px; 
+    padding-bottom:10px;
 }
